# snowmix

./: .gitignore  ChangeLog  Makefile.am  README_0.5.1.1  ReleaseNotes  bootstrap  bootstrapmin-opengl  configure.ac  strapboot
bootstrapd/: bootstrap-OSX  bootstrap-arch  bootstrap-centos  bootstrap-debian  bootstrap-fedora  bootstrap-generic  bootstrap-mageia  bootstrap-opensuse  bootstrap-ubuntu  check_for_tcl_bwidget.sh  check_for_tcl_package.tcl
docs/: index.html  upload
docs/Advanced/: libraries.html  scripting.html  transitions.html
docs/Documentation/: changelog.html  developmentplans.html  endoflife.html  guide-glshapes.html  guides.html  reference.html  releasenotes.html  reserved.html
docs/Examples/: basic.html  input.html  output.html  scripting.html
docs/Intro/: about.html  compileandinstall-0.5.1.html  compileandinstall.html  donations.html  downloads.html  faq.html  news.html  requirements.html  screenshots.html  support.html
docs/Raspberry/: intro.html
docs/sources/: head  index.ht  make_htmls  paypal  sidenav
docs/sources/Advanced/: libraries.ht  scripting.ht  transitions.ht
docs/sources/Documentation/: changelog.ht  developmentplans.ht  endoflife.ht  releasenotes.ht
frames/: make_frame
scripts/: Makefile.am  av_output2dummy  av_output2screen  av_output2tcp_server  demo  input2feed  nc-settings  output2screen  snowmix-settings  v4l2input2feed
src/: audio_feed.cpp  audio_mixer.cpp  audio_sink.cpp  audio_util.cpp  controller.cpp  controller.h  opengl_video.cpp  snowmix.h  version.h  video_feed.cpp  video_output.cpp
(+11 files in other folders)
